[package]
name = "pfp-checker"
version = "0.2.2"
authors=["Jay <jay@projectchaos.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = "0.4.38"
futures = "0.3.30"
reqwest = "0.12.4"
sha1 = "0.10.6"
dotenv = "0.15.0"
