[package]
name = "pfp-checker"
version = "0.5.2"
authors=["Jay <jay@projectchaos.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
chrono = "0.4.42"
futures = "0.3.30"
reqwest = { version = "0.12.24", features = ["multipart"]}
sha1 = "0.10.6"
dotenvy = "0.15.7"
base64 = "0.22.1"
serde = "1.0.228"
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.23.0"
